Paginas principales acabadas y rutas actualizadas
